# src_platform_clip-download

./: AUTHORS  CHANGELOG  Makefile.am  Makefile.in  README.md  configure  configure.ac
etc/admin/clip_download/: Makefile.am  Makefile.in  clip_download_clip.conf  sources.list.clip  sources.list.rm_b  sources.list.rm_h
etc/admin/clip_download/apt.conf.d/: Makefile.am  Makefile.in  debug
etc/clip_update/clip_download/: Makefile.am  Makefile.in  apt.conf.clip  apt.conf.rm_b  apt.conf.rm_h
etc/init.d/: Makefile.am  Makefile.in  clip_download
man/man5/: Makefile.am  Makefile.in  clip_download.conf.5  clip_download_ages.conf.5
man/man8/: Makefile.am  Makefile.in  clip_download.8  install_cert.8
scripts/: Makefile.am  Makefile.in  clip_download  clip_update_lock  clip_update_unlock  install_cert
src/: Makefile.am  Makefile.in  download.c  download.h  downloadmaster.c  start-stop-daemon.c
