datadir = /etc/admin/clip_download
if CORERM
data_DATA = sources.list.clip sources.list.rm_h sources.list.rm_b clip_download_clip.conf clip_download_rm_h.conf clip_download_rm_b.conf 
EXTRA_DIST = sources.list.clip sources.list.rm_h sources.list.rm_b clip_download_clip.conf clip_download_rm_h.conf clip_download_rm_b.conf 
else
data_DATA = sources.list.clip clip_download_clip.conf 
EXTRA_DIST = sources.list.clip clip_download_clip.conf 
endif
