datadir = /update_root/etc/clip_update/clip_download
if CORERM
data_DATA = apt.conf.clip apt.conf.rm_h apt.conf.rm_b clip_download_ages_clip.conf clip_download_ages_rm_h.conf clip_download_ages_rm_b.conf
EXTRA_DIST = apt.conf.clip apt.conf.rm_h apt.conf.rm_b clip_download_ages_clip.conf clip_download_ages_rm_h.conf clip_download_ages_rm_b.conf
else
data_DATA = apt.conf.clip clip_download_ages_clip.conf
EXTRA_DIST = apt.conf.clip clip_download_ages_clip.conf
endif
